:sparkles: 第一周大作业

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -36,6 +36,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "work0926",
+      "srcPath": "./work0926",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
