--- a/build-profile.json5
+++ b/build-profile.json5
@@ -48,6 +48,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "work0928",
+      "srcPath": "./work0928",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
