--- a/build-profile.json5
+++ b/build-profile.json5
@@ -84,6 +84,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "work1010",
+      "srcPath": "./work1010",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
