:sparkles: 第二周大作业

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -96,6 +96,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "work1011",
+      "srcPath": "./work1011",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
